# rust4u-service

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
migrations/: 20230206100000_create_users.sql  20230206101000_create_projects.sql
src/: lib.rs  main.rs
src/api/: issue_controller.rs  mod.rs  project_controller.rs  user_controller.rs
src/application/usecases/: issue_usecases.rs  mod.rs  project_usecases.rs  user_usecases.rs
src/domain/: mod.rs
src/domain/entities/: issue.rs  project.rs  user.rs
src/domain/errors/: domain_error.rs
src/domain/repositories/: issue_repository.rs  project_repository.rs  user_repository.rs
src/infra/db/: issue_repository_sql.rs  mod.rs  project_repository_sql.rs  user_repository_sql.rs
src/infra/jwt/: mod.rs
