[package]
name = "rust4u-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1.22", features = ["macros"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
time = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
jsonwebtoken = "8.2"
bcrypt = "0.12"

[dev-dependencies]
tokio = { version = "1.22", features = ["macros"] }

# sqlx migrate build-time dependency (optional)
[package.metadata.sqlx]
# Set the correct runtime if needed
default-runner = "sqlx-cli"
